public/style.css
* {
    font-family: monospace;
    margin: 0;
}
html, body {
    margin: 0;
    padding: 0;
}

body.error {
    padding: 1em;
}
    body.error h1 {
        margin-bottom: .5em;
    }
    body.error p {
        padding: .5em;
        border: solid 1px #000;
        -webkit-border-radius: 5px;
        -moz-border-radius: 5px;
        border-radius: 5px;
        
        background: #f85032; /* old browsers */
        background: -moz-linear-gradient(top, #f85032 0%, #f16f5c 50%, #f6290c 51%, #f02f17 71%, #e73827 100%); /* firefox */
        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f85032), color-stop(50%,#f16f5c), color-stop(51%,#f6290c), color-stop(71%,#f02f17), color-stop(100%,#e73827)); /* webkit */
        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f85032', endColorstr='#e73827',GradientType=0 ); /* ie */
        
        color: #fff;
        
        -webkit-box-shadow: 1px 1px 3px #999;
        -moz-box-shadow: 1px 1px 3px #999;
        box-shadow: 1px 1px 3px #999;
    }
    body.error a {
        color: #ff0;
    }

header {
    display: block;
    
    background: #7abcff; /* old browsers */
    background: -moz-linear-gradient(top, #7abcff 0%, #60abf8 44%, #4096ee 88%, #3988D6 99%); /* firefox */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7abcff), color-stop(44%,#60abf8), color-stop(88%,#4096ee), color-stop(99%,#3988D6)); /* webkit */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7abcff', endColorstr='#3988D6',GradientType=0 ); /* ie */
}
    header h1 {
        margin: 0 0 30px 0;
        text-align: center;
        color: #fff;
        
        text-shadow: 0px 1px 2px #000000;
        filter: dropshadow(color=#000000, offx=0, offy=1);
    }

nav {
    display: block;
}
    nav ul {
        list-style: none;
        text-align: center;
        padding: 2px;
    }
    nav li {
        display: inline;
        padding: 2px .5em;
        font-family: Verdana, sans-serif;
        color: #ccc;
        
        text-shadow: 0px 1px 2px #000000;
        filter: dropshadow(color=#000000, offx=0, offy=1);
    }
    nav li.selected {
        background-color: #fff;
        color: #000;
        
        -webkit-border-top-left-radius: 5px;
        -webkit-border-top-right-radius: 5px;
        -moz-border-radius-topleft: 5px;
        -moz-border-radius-topright: 5px;
        border-top-left-radius: 5px;
        border-top-right-radius: 5px;
        
        -webkit-box-shadow: #1978C6 0px -2px 20px;
        -moz-box-shadow: #1978C6 0px -2px 20px;
        box-shadow: #1978C6 0px -2px 20px;
        
        text-shadow: none;
        filter: none;
    }
    nav a {
        font-family: inherit;
        font-size: inherit;
        text-decoration: none;
        color: inherit;
    }

article {
    position: relative;
    z-index: 2;
    background-color: #fff;
    display: none;
    padding: 1.5em 5px 5px 5px;
}
article.selected {
    display: block;
}
    article > h1 {
        display: none;
    }

section {
    display: block;
    clear: both;
}

/* SECTION LAYOUTS */
section.layout_horizontal {
}
    section.layout_horizontal > * {
        display: inline-block;
        margin: 0 1em 1em 0;
    }
    section.layout_horizontal > h1 {
        display: none;
    }

section.layout_vertical {
}
    section.layout_vertical > * {
        display: block;
        margin: 0 0 1em 0;
    }
    section.layout_vertical > h1 {
        display: none;
    }

/* SECTION STYLES */
section.fieldset {
    padding: 1.4em .7em .7em .7em;
    margin: 0 0 1em 0;
    position: relative;
    border: solid 2px #ddd;
}
    section.fieldset > h1 {
        display: block;
        margin: 0;
        padding: 0 .5em;
        font-size: 1em;
        position: absolute;
        top: -.8em;
        background-color: #fff;
        color: #666;
        border: solid 2px #ddd;
    }

/* MODULES */
.module {
    display: block;
}

